# mcts

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
src/mcts/: debug.py  game.py  uct_search.py
tests/: test_uct_search.py
